@@ -1,3 +1,13 @@
+2007-06-26  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Maciej Stachowiak.
+        
+        Fixed <rdar://problem/5296627> JSGarbageCollect headerdoc suggests that 
+        using JavaScriptCore requires leaking memory
+
+        * API/JSBase.h: Changed documentation to explain that you can pass NULL
+        to JSGarbageCollect.
+
 2007-06-26  Adam Treat  <adam@staikos.net>
 
         Reviewed by Adam Roben.
